--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1> WELCOME</h1>
-<app-login></app-login>
-<app-dashboard></app-dashboard>
+
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
