--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,24 @@
 <html>
     <head></head>
-    <body>
-        <div>
-            <input *ngFor="addExpense()" type="text" >
-        </div>
+    <body style="text-align: center;">
+        <div >
+        <h1>Expenses</h1>
+        <form (submit)="addExpense()">
+          <label>Expense Name:</label>
+          <input type="text" name="expensename" [(ngModel)]="expenseName"> <br><br>
+          <label>Amount:</label>
+          <input type="number" name="amount" [(ngModel)]="amount"><br><br>
+          <button type="submit">Add Expense</button>
+          
+        </form>
+        
+            <li *ngFor="let expense of expenses">
+              {{ expense.name }} - ${{ expense.amount }}
+            </li>
+          
+      </div>
+      <div>
+        <h3>Total Amount: ${{ totalAmount }}</h3>
+      </div>
     </body>
 </html>
