--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                 <input type="password" name="password" [(ngModel)] = "password">
 
                 <pre></pre>
-                <button type="submit"> Login </button>
+                <button type="submit" routerLink="/dashboard" routerLinkActive="active"> Login </button>
             </div>
         </form>
         </div>
